Fix failing build